welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:10: error: not found: value res
   	res=((getCouleurSol())==(Color.green))
        ^SlugTracking:12: error: not found: value res
    return res
           ^