welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  
  if (estFaceMur()){
    return false
    
  }
  else {
    avance()
   	res=((getCouleurSol())==(Color.green))
    recule() 
    return res
  }
    
}